--- a/style.css
+++ b/style.css
@@ -23,6 +23,7 @@
 
 body{
     font-family: 'Poppins', sans-serif;
+    background-color: hsl(217, 28%, 15%);
 }
 
 th, td {
@@ -76,7 +77,7 @@ th, td {
 
     h2{
         margin-left: 100px;
-        color: rgb(49, 82, 0);
+        color: #a2ed91;
         letter-spacing: 2px;
         font-size:xx-large;
     }
@@ -84,7 +85,8 @@ th, td {
     .virus-icon img{
         margin-top: 50px;
         margin-left: 50px;
-        width: 70px;    
+        width: 70px;
+        margin-right:50px;    
     }
 
     .virus-icon{
