--- a/style.css
+++ b/style.css
@@ -5,6 +5,22 @@
     box-sizing: border-box;
 }
 
+.head-img{
+    width: 70px;
+    height: 80px;
+    position: absolute;
+    transform: translate(120px, 0);
+
+}
+
+.heading{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    /* margin-bottom: 50px;
+    padding-left: 50px; */
+}
+
 /* .grid{
     display: grid;
     grid-template-columns: repeat(5, 1fr);
@@ -31,21 +47,22 @@ th, td {
     padding: 10px;
     border-left: 1px solid rgb(192, 186, 186);
     border-right: 1px solid rgb(192, 186, 186);
-    border-bottom: 1px solid rgb(192, 186, 186); 
-  }
+    border-bottom: 1px solid rgb(192, 186, 186);  
+}
   
   table{
       margin: auto;
       border-collapse: collapse;
+      width: 100%;
       
   }
 
   th{
-      background-color: rgb(110, 180, 5);
+      background-color: rgb(101, 155, 20);
+      font-weight: lighter;
   }
 
   tr:hover{
-    /* background-color: gainsboro; */
     background-color: black;
     border: none;
   }
@@ -59,8 +76,10 @@ th, td {
   .search{
       display: flex;
       justify-content: space-between;
+      align-items: center;
       margin-top: 50px;
-      margin-right: 50px;   
+      padding: 50px;   
+      width: 100%;
   }
 
   .search-bar button{
@@ -68,7 +87,6 @@ th, td {
       padding-top: 5px;
       padding-bottom: 5px;
       width: 70px;
-      /* font-size: x-small; */
       font-size: 12px;
   }
 
@@ -84,58 +102,99 @@ th, td {
       height: 30px;
       outline: none;
       padding-left: 30px;
+      border: none;
     }
 
     h2{
-        margin-left: 100px;
-        color: #a2ed91;
+        color: #7cc76a;
         letter-spacing: 2px;
         font-size:xx-large;
+        z-index: 9999;
     }
 
     .virus-icon img{
-        margin-top: 50px;
-        margin-left: 50px;
+        margin: 0px 50px 10px 50px;
         width: 70px;
-        margin-right:50px;    
+    }
+
+    .header{
+        width: 100%;
     }
 
     .virus-icon{
         display: flex;
         justify-content: space-between;
+        align-items: center;
+        width: 100%;
+
     }
 
-    @media only screen 
-    and (min-device-width: 320px) {
-        *{
-            padding: 0;
-            margin: 0;
-            box-sizing: border-box;
-        }
-        
+    .search-bar-none{
+        display: none;
+    }
 
 
 
-        /* table{
-            width: 50vw;
-        }
+    @media (min-width: 0px)
+    and (max-width: 600px) {
+      .heading img{
+        transform: translate(-30px,10px);
+      }
 
-        .search{
-            display: unset;
-        }
+      tr{
+          overflow-x: scroll;
+      }
 
-        h2{
-            margin-left: 20px;
-            margin-top: 20px;
-        }
-        .search input{
-            width: 100px;
-            margin-right: 5px;
-        }
-        .search-bar{
-            /* margin-right: 10px; */
-            display: flex;
-            justify-content: flex-end;
-        } */
+      .search-bar-none{
+          display: block;
+          width: 100%;
+          
+      }
+
+      .search-bar{
+          display: none;
+      }
+
+      h2{
+        line-height: 35px;
+        padding: 15px;
+      }
+
+      .search-bar-none button{
+        outline: none;
+        width: 25%;
+        height: 25px;
+        font-size: 10px;
+        border-radius: 5px;
+    }
+
+    button:hover{
+        background-color:#a8e29b;
+    }
+  
+    .search-bar-none input[type=text]:focus {
+      background-color: rgb(240, 232, 232); ;
+      border: 2px solid #555;  
+      
+    }
+
+    .search{
+        display: block;
+    }
+  
+    .search-bar-none input[type=text]{
+        background-position: 5px 5px;
+        width: 70%;
+        height: 25px;
+        outline: none;
+        padding-left: 10px;
+        border: none;
+        border-radius: 5px;
+      }
+
+    .virus-icon{
+        margin-bottom: 20px;
+    }
+  
 
     }
